test/cli/test-mutate/patched-resource-negative/resources.yaml
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: expected-pass
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: expected-fail
