test/cli/test-mutate/patched-resource-negative/results.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: expected-pass
  namespace: default
  annotations:
    test-annotation: foo
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: expected-fail
  namespace: default
  annotations:
    test-annotation: bar
